--- a/client/src/components/home/App.css
+++ b/client/src/components/home/App.css
@@ -29,3 +29,9 @@
     height: 70vh;
     background: #fafafa;
 }
+
+.font-style {
+    color: #5f6368;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+}
