--- a/client/src/components/Uploader/Uploader.css
+++ b/client/src/components/Uploader/Uploader.css
@@ -9,8 +9,15 @@
 .card-image-holder {
     border:1px dashed gray;
     height: 62vh;
+    width: auto;
+
 }
 
 .card-image-button {
     width: 100%;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
